@@ -1,0 +1,10 @@
+Processing test71...
+
+Warnings...
+
+test_input/test71.py:8: Code appears to be unreachable
+test_input/test71.py:10: Function returns a value and also implicitly returns None
+test_input/test71.py:14: Code appears to be unreachable
+test_input/test71.py:16: Function returns a value and also implicitly returns None
+test_input/test71.py:20: Code appears to be unreachable
+test_input/test71.py:26: Code appears to be unreachable
