@@ -1,5 +1,6 @@
 
 Version 0.8.8   - xx January 2002
+  * Fix spurious warnings for unreachable code (not enough to enable, yet)
   * Fix spurious warnings for integer division from:  (x + 100.0) / 10
   * Fix spurious warnings for implicit returns when raise in except: clause
 
